# Aegis-ML

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
app/api/: __init__.py  middleware.py  routes.py
app/classifiers/: __init__.py  cascade_classifier.py  hf2_classifier.py  hf_classifier.py  onnx2_classifier.py  onnx_classifier.py  sklearn_classifier.py  text_preprocessor.py
app/guardrails/: __init__.py  canary.py  input_guard.py  output_guard.py
app/models/: database.py  schemas.py
app/proxy/: __init__.py  llm_proxy.py
data/: adversarial_eval.csv
demo/: __init__.py  gradio_ui.py
models/: sklearn_classifier.joblib
notebooks/: phase3_comparison.ipynb
tests/: __init__.py  test_adversarial_regression.py  test_guardrails.py  test_preprocessing.py  test_proxy.py
training/: __init__.py
training/data/: __init__.py  adversarial_eval.py  prepare_dataset.py  synthetic_gen.py
training/phase1_sklearn/: __init__.py  evaluate.py  train.py
training/phase2_hf/: __init__.py  evaluate.py  export_onnx.py  train.py
training/phase3_hf2/: __init__.py  evaluate.py  export_onnx.py  model.py  train.py
