[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aegis-ml"
version = "1.0.0"
description = "Adversarial Prompt Injection Detector Microservice — LLM Firewall / Guardrails Service"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Aegis-ML" }]
keywords = ["llm", "security", "guardrails", "prompt-injection", "firewall"]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    # Config + validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    # Rate limiting
    "slowapi>=0.1.9",
    # Database
    "aiosqlite>=0.20.0",
    # ML — Phase 1 (always installed, lightweight)
    "scikit-learn>=1.6.0",
    "joblib>=1.4.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    # Prometheus metrics
    "prometheus-client>=0.21.0",
    # Gradio demo UI
    "gradio>=5.0.0",
    # HuggingFace datasets (for training data download)
    "datasets>=3.2.0",
]

[project.optional-dependencies]
# Phase 2 — HF fine-tuning (heavier, GPU required)
hf = [
    "torch>=2.5.0",
    "transformers>=4.47.0",
    "peft>=0.14.0",
    "bitsandbytes>=0.45.0",
    "accelerate>=1.2.0",
    "evaluate>=0.4.0",
    "sentencepiece>=0.2.0",
    "protobuf>=5.29.0",
]
# ONNX export + inference (install alongside [hf])
# AMD ROCm users: pip install onnxruntime-rocm  (instead of the onnxruntime pulled by optimum)
onnx = [
    "optimum[onnxruntime]>=1.23.0",
]
# Development + testing
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
# Jupyter notebook (Phase 3 comparison)
notebook = [
    "jupyter>=1.1.0",
    "ipykernel>=6.29.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "plotly>=5.24.0",
]

[project.scripts]
aegis-serve = "app.main:run"
aegis-demo = "demo.gradio_ui:main"

[tool.hatch.build.targets.wheel]
packages = ["app", "demo", "training"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

